2022-10-19T08:42:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3280058256 # 534
* notice: last 14d: unq all: 10 34
* notice: prev accum: outdated-unq outdated-all / unq all: 360 563 / 380 596
* notice: next accum: outdated-unq outdated-all / unq all: 360 563 / 381 597
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-19]

2022-10-18T16:42:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3275305266 # 532
* notice: last 14d: unq all: 10 33
* notice: prev accum: outdated-unq outdated-all / unq all: 359 560 / 380 595
* notice: next accum: outdated-unq outdated-all / unq all: 360 563 / 380 596
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-04] / [2022-10-18]

2022-10-18T08:39:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3271865951 # 531
* notice: last 14d: unq all: 10 35
* notice: prev accum: outdated-unq outdated-all / unq all: 359 560 / 379 594
* notice: next accum: outdated-unq outdated-all / unq all: 359 560 / 380 595
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-18]

2022-10-18T02:37:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3270191970 # 530
* notice: last 14d: unq all: 10 34
* notice: prev accum: outdated-unq outdated-all / unq all: 359 560 / 379 593
* notice: next accum: outdated-unq outdated-all / unq all: 359 560 / 379 594
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-17]

2022-10-17T08:42:22Z: