@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-06T02:11:50Z",
-  "count" : 2,
+  "timestamp" : "2022-10-19T16:46:11Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
