@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-10-19T08:42:29Z",
+  "timestamp" : "2022-10-19T16:46:11Z",
   "count_outdated" : 563,
   "uniques_outdated" : 360,
-  "count" : 597,
-  "uniques" : 381,
+  "count" : 596,
+  "uniques" : 380,
   "clones" : [
     {
       "timestamp": "2022-10-05T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
