@@ -1,11 +1,11 @@
 {
-  "count": 34,
-  "uniques": 10,
+  "count": 33,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-10-05T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-08T00:00:00Z",
