@@ -1,3 +1,11 @@
+2022-10-19T16:46:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3283432651 # 535
+* notice: last 14d: unq all: 9 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 360 563 / 381 597
+* notice: next accum: outdated-unq outdated-all / unq all: 360 563 / 380 596
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-10-05]
+
 2022-10-19T08:42:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3280058256 # 534
 * notice: last 14d: unq all: 10 34
